Hide illegal access warnings temporarily